# ds4-bridge

./: .gitignore  LICENSE  README.md  SETUP.md  index.html  package-lock.json  package.json  tailwind.config.js
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build.yml
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: audio.rs  ds4.rs  lib.rs  main.rs  vigem.rs
