[package]
name = "ds4-bridge"
version = "0.1.0"
edition = "2021"

[lib]
name = "ds4_bridge_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-autostart = "2"
tauri-plugin-notification = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hidapi = { version = "2.6", default-features = false, features = ["windows-native"] }
vigem-client = "0.1"
tokio = { version = "1", features = ["rt", "rt-multi-thread"] }
parking_lot = "0.12"
anyhow = "1"
log = "0.4"
env_logger = "0.11"
reqwest = { version = "0.12", features = ["rustls-tls"], default-features = false }
